// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sx18gt8 {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary);
  cursor: pointer;
  font-family: var(--sx-fonts-body);
  text-decoration: none;
}

.sx18gt8:focus,
.sx18gt8:hover {
  color: var(--sx-colors-tertiary);
  text-decoration: underline;
}

.sx18gt8:active {
  color: var(--sx-colors-primary);
}

.sxgpjqn > .sx18gt8,
.sxhyvnz > .sx18gt8,
.sx03kze > .sx18gt8 {
  font-size: 100%;
  line-height: 1;
}

.sxgpjqn > .sx18gt8::before,
.sxgpjqn > .sx18gt8::after,
.sxhyvnz > .sx18gt8::before,
.sxhyvnz > .sx18gt8::after,
.sx03kze > .sx18gt8::before,
.sx03kze > .sx18gt8::after {
  content: none;
}

.sx18gt8ryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sx18gt8ryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sx18gt8ryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

<div>
  <a
    class="sx18gt8 sx18gt8ryo8u--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sx18gt8 {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary);
  cursor: pointer;
  font-family: var(--sx-fonts-body);
  text-decoration: none;
}

.sx18gt8:focus,
.sx18gt8:hover {
  color: var(--sx-colors-tertiary);
  text-decoration: underline;
}

.sx18gt8:active {
  color: var(--sx-colors-primary);
}

.sxgpjqn > .sx18gt8,
.sxhyvnz > .sx18gt8,
.sx03kze > .sx18gt8 {
  font-size: 100%;
  line-height: 1;
}

.sxgpjqn > .sx18gt8::before,
.sxgpjqn > .sx18gt8::after,
.sxhyvnz > .sx18gt8::before,
.sxhyvnz > .sx18gt8::after,
.sx03kze > .sx18gt8::before,
.sx03kze > .sx18gt8::after {
  content: none;
}

.sx18gt8ryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sx18gt8ryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sx18gt8ryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sx18gt8g0h8h--size-lg {
  font-size: var(--sx-fontSizes-lg);
  line-height: 1.52;
}

.sx18gt8g0h8h--size-lg::before {
  content: '';
  margin-bottom: -0.3983em;
  display: table;
}

.sx18gt8g0h8h--size-lg::after {
  content: '';
  margin-top: -0.3983em;
  display: table;
}

<div>
  <a
    class="sx18gt8 sx18gt8g0h8h--size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
